# CPP_APC

./: CMakeLists.txt  README.md
A few tests to begin CPP/: CMakeLists.txt  main.cpp
Assignments/Assignment 1/: README.md
Assignments/Assignment 1/10949145/: CMakeLists.txt  eig_finder_helpers.h  inverse_power_iteration.cpp  inverse_power_iteration.h  main.cpp  matrixhelpers.cpp  matrixhelpers.h  power_iteration.cpp  power_iteration.h  shift_inverse_power_iteration.cpp  shift_inverse_power_iteration.h  squarematrix.cpp  squarematrix.h  vectorhelpers.cpp  vectorhelpers.h
Assignments/Assignment 1/10949145/inputs/: input_10.txt  input_20.txt  input_50.txt
Assignments/Assignment 2/: README.md
Assignments/Assignment 2/10949145/: CMakeLists.txt  activation_function.hpp  cnn.cpp  cnn.hpp  convolutional_layer.cpp  convolutional_layer.hpp  dataset.cpp  dataset.hpp  fc_layer.cpp  fc_layer.hpp  feature_layer.hpp  main.cpp  matrix.cpp  matrix.hpp  max_pooling_layer.cpp  max_pooling_layer.hpp  relu.cpp  relu.hpp  sigmoid.cpp  sigmoid.hpp  tensor_3d.cpp  tensor_3d.hpp  test.hpp
Assignments/Assignment 2/10949145/weights/: trained_weights.txt
Docs/: Git buffer.rtf
Exercise Notebook/Chapter 1 - From C to C++/: CMakeLists.txt  main.cpp
Exercises/Exercise Session 05 - 25:10:2024/MinRnInitial/: CMakeLists.txt  FunctionRn.h  Monomial.cpp  Point.h
Exercises/Exercise Session 07 - 29:10:2024/RootFinderInitial/: CMakeLists.txt  Function.hpp  RootFinder.cpp
Exercises/Exercise Session 08 - 31:10:2024/initial_code/: CMakeLists.txt  Interpolation.cpp  LinearInterpolation.cpp  NearestNeighborInterpolation.cpp  Point.h  StepwiseInterpolation.cpp  StepwiseInterpolation.h  main.cpp
Exercises/Exercise Session 16 - 13:12:2024/: CMakeLists.txt  main.cc  main_advanced.cc  main_initial.cc
Exercises/Exercise Session 9 - 05:11:2024/: CMakeLists.txt
Exercises/Exercise Session 9 - 05:11:2024/initial_code/: CMakeLists.txt  block_matrix.cpp  dense_matrix.hpp  main.cpp  matrix.cpp
Game Theory/: CMakeLists.txt
Labs/Lab2_SocialNetwork/lab2-initial/: CMakeLists.txt  main.cpp  social_network.cpp  social_network.hpp  user.cpp  user.hpp
Labs/Lab4_STL/lab4/: CMakeLists.txt  Player.cc  Player.hh  RandomPlayerGenerator.cc  RandomPlayerGenerator.hh  main.cc  search.cc  timing.cc
Labs/Lab5_MPI/: CMakeLists.txt  caesar_parallel1.cpp  caesar_parallel1_initial.cpp
Lecture 01 - Introduction to C++/Fibonacci/: CMakeLists.txt
Lecture 01 - Introduction to C++/HelloNoe/: main.cpp
Lecture 01 - Introduction to C++/NameSpaceInPractice/: MyFriendLibrary.h
Lecture 01 - Introduction to C++/unsigned/: main.cpp
Lecture 02 & 03 - Pointers/References/: main.cpp
Lecture 02 & 03 - Pointers/Test Fct With Pointers/: CMakeLists.txt
Lecture 05 - Pointers advanced/StringIterator/: CMakeLists.txt
Lecture 05 - Pointers advanced/StructPoint/: CMakeLists.txt
Lecture 06 & 09 - Classes/AccountStatic/: Account.cpp  Account.h
Lecture 06 & 09 - Classes/ClassScope/: CMakeLists.txt
Lecture 06 & 09 - Classes/Date/: testDates.cpp
Lecture 06 & 09 - Classes/operatorFriends/: CMakeLists.txt
Lecture 07 - Function overload/ConstOverload/: CMakeLists.txt
Lecture 08 - Constructors/SalesDataConstructor/: main.cpp
Lecture 1 - Introduction to C++/AreInputsEqual/: CMakeLists.txt
Lecture 1 - Introduction to C++/Fibonacci/: main.c  main.cpp
Lecture 1 - Introduction to C++/HelloNoé/: CMakeLists.txt
Lecture 1 - Introduction to C++/MyFirstClass/: X.cpp  X.h
Lecture 1 - Introduction to C++/OperatorPlusPlus/: main.cpp
Lecture 10  & 14 - Inheritance/BookSalesAbstractClass/: Disc_quote.h  Unfair_quote.cpp  Unfair_quote.h
Lecture 10  & 14 - Inheritance/BookSalesDynamicBinding/: main.cpp
Lecture 10 - Inheritance/BookSalesAbstractClass/: Bulk_quote.h
Lecture 10 - Inheritance/BookSalesDynamicBinding/: Quote.cpp  main.cpp
Lecture 10 - Inheritance/Sneaky/: Base.cpp  Base.h  Sneaky.cpp
Lecture 11 - Smart pointers/SharedPtr_Count/: main.cpp
Lecture 13 /WordTransformation/: main.cpp
(+380 files in other folders)
